# dar

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
src/: archive.rs  cli.rs  errors.rs  lib.rs  main.rs  pager.rs  terminal.rs  utils.rs  validation.rs
src/commands/: append.rs  create.rs  defragment.rs  extract.rs  list.rs  mod.rs  validate.rs
src/models/: archive.rs
