[package]
name = "dar"
description = "Dadyarri's Archiver"
version = "0.3.0"
authors = ["dadyarri <me@dadyarri.ru>"]
autobins = false
license = "MIT"
edition = "2024"

[[bin]]
name = "dar"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.54", features = ["cargo"] }
term = "0.5"
zeekstd = "0.6.2"
brotli = "8.0.2"
clap_complete = "4.5.65"
eyre = "0.6.12"
color-eyre = "0.6.5"
ignore = "0.4"
zstd = "0.13"
blake3 = "1.5"
filetime = "0.2"

[build-dependencies]
clap = { version = "4.5.54", features = ["cargo"] }
clap_complete = "4.5.65"
